2005-06-19  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Sort dumpinfo -pall output.

2005-06-19  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Fix dumpinfo %b to give actual value not dummy db value.

2005-06-19  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Engine.pm: Fix bug with params_matching in dumpinfo. Also add
	'-p all' option for all percent expansions.

2005-06-18  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: chgrp->admin (->nobody if build-as-nobody) %d and
	builddir (more secure and deterministic, because "files are always
	created with group of their parent dir")

2005-06-14  Rob Braun <bbraun@opendarwin.org>

	* VirtPackage.pm: Be slightly more robust on what outputs (if any)
	are accepted from executing /usr/bin/gcc*.

2005-06-12  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* PkgVersion.pm: Stop --build-as-nobody from leaving nobody-owned symlinks.

2005-06-08  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm: we no longer support 10.2

2005-06-01  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* PkgVersion.pm: work around an apple java installer bug

2005-05-26  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Configure.pm: Fix Spotlight warning.

2005-05-26  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Better err if qpkg-query fails while removing buildlock

2005-05-26  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Convert "reinstall" to "rebuild" if no .deb present.

2005-05-25  Peter O'Gorman  <ogorman@users.sourceforge.net>

	* Bootstrap.pm: Maybe allow bootstrap on darwin8.

2005-05-24  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Config.pm, Validation.pm: Make default buildpath %p/fink/src/fink.build
	* Configure.pm, Engine.pm: Warn about Spotlight indexing builds.
	* Config.pm: New *_flag API.

2005-05-24  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* PkgVersion.pm: Insert the priority into .debs.
	* Engine.pm: Try not to put everything into the override. On first run,